# openbw-rust

./: README.md
openbw/: .gitignore  Cargo.toml
openbw/src/: lib.rs  main.rs  texture-vs.glsl  ui.rs
starcraft-assets/: .gitignore  Cargo.toml
starcraft-assets/src/: chk.rs  cv5.rs  fs.rs  lib.rs  loader.rs  map.rs  mpq.rs  vf4.rs  vr4.rs  vx4.rs  wpe.rs
starcraft-assets/src/map/: chk.rs  mod.rs
starcraft-map/: Cargo.toml
starcraft-map/src/: controller.rs  dimensions.rs  lib.rs  megatile.rs  side.rs  string_data.rs  tileset.rs
ui/: (listfile)  .gitignore  Cargo.toml
ui/src/: lib.rs  main.rs  texture-vs.glsl
ui/src/assets/: mod.rs  mpq.rs  terrain.rs
