[package]
name = "starcraft-assets"
version = "0.1.0"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
byteorder = "1"
rgb = "0.8"
ceres-mpq = { git = "https://github.com/drdgvhbh/ceres-mpq" }
num-traits = "0.2"
num-derive = "0.2"
